feat: makes suggested changes from PR
- GetOrders now works within an optional status
- Simplifies code to use SQL over Golang functions for sorting
- Generates the swagger docs
- Some renaming of functions, variables and structs
