# api/services/orders/order_handler.go
@@ -2,7 +2,6 @@ package orders
 
 import (
 	"net/http"
-	"sort"
 
 	"github.com/gorilla/mux"
 	"github.com/sockify/sockify/middleware"
@@ -12,59 +11,33 @@ import (
 
 type Handler struct {
 	orderStore types.OrderStore
-	adminStore types.AdminStore
 }
 
-func NewHandler(orderStore types.OrderStore, adminStore types.AdminStore) *Handler {
-	return &Handler{orderStore: orderStore, adminStore: adminStore}
+func NewHandler(orderStore types.OrderStore) *Handler {
+	return &Handler{orderStore: orderStore}
 }
 
-func (h *Handler) RegisterRoutes(router *mux.Router) {
-	router.HandleFunc("/orders", middleware.WithJWTAuth(h.adminStore, h.handleGetOrders)).Methods(http.MethodGet)
+func (h *Handler) RegisterRoutes(router *mux.Router, adminStore types.AdminStore) {
+	router.HandleFunc("/orders", middleware.WithJWTAuth(adminStore, h.handleGetOrders)).Methods(http.MethodGet)
 
 }
 
-// Get all orders, possibly filtered by status
+// @Summary Retrieve all orders
+// @Description Retrieves all orders from the database with optional filters.
+// @Tags Orders
+// @Produce json
+// @Security Bearer
+// @Param status query string false "Status of the order"
+// @Success 200 {array} types.Order
+// @Router /orders [get]
 func (h *Handler) handleGetOrders(w http.ResponseWriter, r *http.Request) {
 	status := r.URL.Query().Get("status")
 
-	orders, err := h.orderStore.GetOrdersByStatus(status)
+	orders, err := h.orderStore.GetOrders(status)
 	if err != nil {
 		utils.WriteError(w, http.StatusInternalServerError, err)
 		return
 	}
 
-	sortOrdersByDateDesc(orders)
-
-	orderResponses := make([]types.OrderResponse, 0)
-	for _, order := range orders {
-		total := calculateOrderTotal(order.Items)
-		orderResponses = append(orderResponses, types.OrderResponse{
-			OrderID:       order.ID,
-			InvoiceNumber: order.InvoiceNumber,
-			Total:         total,
-			Address:       order.Address,
-			Contact:       order.Contact,
-			Items:         order.Items,
-			CreatedAt:     order.CreatedAt,
-		})
-	}
-
-	utils.WriteJson(w, http.StatusOK, orderResponses)
-}
-
-// sortOrdersByDateDesc sorts orders by CreatedAt date in descending order
-func sortOrdersByDateDesc(orders []types.Order) {
-	sort.Slice(orders, func(i, j int) bool {
-		return orders[i].CreatedAt.After(orders[j].CreatedAt)
-	})
-}
-
-// calculateOrderTotal calculates the total cost of an order
-func calculateOrderTotal(items []types.OrderItem) float64 {
-	total := 0.0
-	for _, item := range items {
-		total += item.Price * float64(item.Quantity)
-	}
-	return total
+	utils.WriteJson(w, http.StatusOK, orders)
 }
